# weapon-optimizer

./: .gitignore  README.md
backend/: Cargo.toml  Dockerfile.api  Dockerfile.worker
backend/src/: calculate.rs  main.rs  weapons.rs  worker.rs
backend/src/modules/: general_rounds_modules.rs  impact_rounds_modules.rs  launcher_modules.rs  mod.rs  shotgun_modules.rs  sniper_modules.rs  special_rounds_modules.rs
frontend/: .eslintrc.js  next.config.js  package-lock.json  package.json
frontend/src/app/: HomeClient.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/api/optimize/: route.ts
frontend/src/app/api/optimize/weapon-data/: route.ts
frontend/src/app/tier-list/: page.tsx
frontend/src/components/: ChangelogButton.tsx  SniperTierList.tsx  WeaponDataContext.tsx  WeaponOptimizer.tsx  WeaponTierList.tsx  types.ts
frontend/src/lib/: mongodb.ts  optimization.ts
