[package]
name = "weapon_optimizer_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.0"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
rayon = "1.5"
itertools = "0.10"
bincode = "1.3"