[package]
name = "weapon_optimizer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6.4"
mongodb = { version = "2.1", features = ["bson-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
structopt = "0.3"
futures = "0.3"
bincode = "1.3"
itertools = "0.10"
strum = "0.24"
strum_macros = "0.24"
rayon = "1.5"
dotenv = "0.15"
log = "0.4"
env_logger = "0.9"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }